LDADD = -lm @DEPENDENCIES_LIBS@
AM_CPPFLAGS = @DEPENDENCIES_CFLAGS@
bin_PROGRAMS = PZQGame
PZQGame_SOURCES = main.cpp MachineInjection.cpp Dialogue.cpp Quest.cpp Renderer.cpp GlobalObjects.cpp GeomModel.cpp MachineGame.cpp Sprite.cpp common.h MachineInjection.h Dialogue.h Quest.h Renderer.h GlobalObjects.h GeomModel.h MachineGame.h Sprite.h GameGlobalState.h
EXTRA_DIST = glm
