LDADD = @DEPENDENCIES_LIBS@
AM_CPPFLAGS = @DEPENDENCIES_CFLAGS@
bin_PROGRAMS = PZQGame
PZQGame_SOURCES = main.cpp MachineInjection.cpp Dialogue.cpp Quest.cpp Renderer.cpp AudioEngine.cpp GlobalObjects.cpp GeomModel.cpp MachineGame.cpp DisjointSet.cpp Sprite.cpp Font.cpp AI.cpp common.h MachineInjection.h Dialogue.h Quest.h Renderer.h AudioEngine.h GlobalObjects.h GeomModel.h MachineGame.h DisjointSet.h Sprite.h GameGlobalState.h Font.h AI.h
EXTRA_DIST = glm
